2022-10-27T16:35:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3339227426 # 559
* notice: last 14d: unq all: 3 32
* notice: prev accum: outdated-unq outdated-all / unq all: 374 584 / 391 616
* notice: next accum: outdated-unq outdated-all / unq all: 375 586 / 391 618
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-10-13] / [2022-10-27]

2022-10-27T08:30:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3335772941 # 558
* notice: last 14d: unq all: 3 32
* notice: prev accum: outdated-unq outdated-all / unq all: 374 584 / 390 615
* notice: next accum: outdated-unq outdated-all / unq all: 374 584 / 391 616
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-27]

2022-10-27T02:10:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3333974406 # 557
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 367 574 / 384 606
* notice: next accum: outdated-unq outdated-all / unq all: 374 584 / 390 615
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [2022-10-12] / [2022-10-13 2022-10-26]

2022-10-26T16:35:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3330848918 # 556
* notice: last 14d: unq all: 3 32
* notice: prev accum: outdated-unq outdated-all / unq all: 367 574 / 384 605
* notice: next accum: outdated-unq outdated-all / unq all: 367 574 / 384 606
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-10-26]

2022-10-26T08:30:12Z: