@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-27T16:35:46Z",
+  "timestamp" : "2022-10-28T08:36:00Z",
   "count_outdated" : 586,
   "uniques_outdated" : 375,
   "count" : 618,
-  "uniques" : 391,
+  "uniques" : 392,
   "clones" : [
     {
       "timestamp": "2022-10-14T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-10-27T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
