@@ -1,3 +1,11 @@
+2022-10-28T08:36:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3344015006 # 561
+* notice: last 14d: unq all: 3 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 375 586 / 391 618
+* notice: next accum: outdated-unq outdated-all / unq all: 375 586 / 392 618
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-14 2022-10-28]
+
 2022-10-27T16:35:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3339227426 # 559
 * notice: last 14d: unq all: 3 32
